--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 * {
-  color: red
+  color: red;
+  font-family: 'Lato', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* The box-sizing property allows us to include the padding and border in an element's total width and height. */
+  }
+
+h1, h2, h3, h4, h5, h6, span{
+  color: #242424;
+  text-align: center;
+  line-height: 1.25;
+}
+
+p {
+  line-height: 1.5;
+  font-size: 16px;
 }
