--- a/style.css
+++ b/style.css
@@ -36,11 +36,13 @@ li {
 .row {
   width: 100%;
   max-width: 800px;
+  margin: 0 auto;
 }
 
 .text--purple {
   color: #6030b1;
 }
+
 /* NAVIGATION BAR */
 
 nav {
@@ -51,6 +53,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 12px;
 }
 
 .nav_link--list {
@@ -84,18 +87,23 @@ nav {
 }
 
 /* ABOUT ME */
+
 .about-me {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
+.about-me_info {
+  display:  flex;
+  flex-direction: column;
+}
+
 .about-me_info--container {
-  display: flex;
-  /* justify-content: center; */
+  display: flex; 
   align-items: center;
   flex-direction: column;
-  max-width: 600px;
+  max-width: 500px;
   margin: 0 auto;
   text-align: center;
 }
@@ -122,4 +130,21 @@ nav {
 .about-me_info--para {
   font-size: 20px;
   margin-bottom: 28px;
+}
+
+.about-me_link {
+  font-size: 20px;
+  color: #242424;
+  text-decoration: none;
+  padding: 0 16px;
+}
+
+.about-me_img--container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.about-me_img {
+  width: 100%;
 }
