--- a/style.css
+++ b/style.css
@@ -206,9 +206,31 @@ nav {
   font-size: 20px;
 }
 
-.language:hover .language_name {
-  opacity: 1;
-  transform: scale(1);
+.project_img {
+  width: 100%;
 }
 
+.project_wrapper {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+  border-radius: 20px;
+}
+
+.project_wrapper:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #1c1d25;
+  opacity: 0;
+  transition: opacity 450ms ease;
+}
+
+.project:hover .project_wrapper:before {
+  opacity: 0.7;
+}
 
