--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ nav {
   transition: all 300ms ease;
 }
 
-.language_img:hover {
+.language:hover .language_img {
   filter:brightness(80%);
   opacity: 0.86;
   transform: scale(0.9);
@@ -202,20 +202,28 @@ nav {
   bottom: 0;
   opacity: 0;
   transform: scale(0);
-  transition: all 300ms ease;
+  transition: all 300ms;
   font-size: 20px;
 }
 
+.language:hover .language_name{
+  transform: scale(1);
+  opacity:1;
+}
+
+/* PROJECTS */
+
 .project_img {
   width: 100%;
-}
+  transition: all 500ms ease;
+ }
 
 .project_wrapper {
   display: flex;
   position: relative;
   overflow: hidden;
   box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
-  border-radius: 20px;
+  border-radius: 20px;  
 }
 
 .project_wrapper:before {
@@ -227,10 +235,59 @@ nav {
   width: 100%;
   background-color: #1c1d25;
   opacity: 0;
-  transition: opacity 450ms ease;
+  transition:  opacity 450ms ease;
+  z-index: 2;
+  transform: translateY(100%);
 }
 
 .project:hover .project_wrapper:before {
   opacity: 0.7;
+  transform: translateY(0);
 }
 
+.project:hover .project_img {
+  transform: scale(1.07);
+  filter: blur(5px);
+} 
+
+.project:hover .project_description {
+  opacity: 1;
+  transform: translateY(-50%);
+}
+
+.project_list {
+  padding-top: 40px;
+}
+
+.project_description {
+  position: absolute; 
+  top: 50%;
+  left: 90px;
+  transform: translateY(100%);
+  max-width: 550px;
+  z-index: 3;
+  opacity: 0;
+  transition: transform 450ms, opacity 300ms;
+}
+
+.project_description--title{
+  font-size: 40px;
+}
+
+.project_description--para {
+  margin: 16px 0;
+}
+
+.project_description--link {
+  font-size: 20px;
+  margin-right: 16px;
+  text-decoration: none;
+}
+
+.project_description--title,
+.project_description--sub-title,
+.project_description--para,
+.project_description--link {
+  text-align: left;
+  color: white;
+}
