--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   /* height: 3000px; */
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6, span {
   color: #242424;
   text-align: center;
@@ -21,6 +25,26 @@ p {
   line-height: 1.5;
   font-size: 16px;
 }
+
+a {
+  text-decoration: none;
+  position: relative;
+}
+
+.link_hover-effect:after {
+  content:"";
+  position: absolute;
+  height: 3px;
+  background-color: black;
+  width: 0;
+  bottom: -3px;
+  left: 0;
+}
+
+.link_hover-effect:hover:after {
+  width: 100%;
+}
+
 
 li {
   list-style-type: none;
@@ -76,7 +100,6 @@ nav {
 
 .nav_link--anchor {
   margin: 0 12px;
-  text-decoration: none;
   color: #242424;
   font-weight: 700;
 }
@@ -148,8 +171,7 @@ nav {
 
 .about-me_link {
   font-size: 20px;
-  color: #242424;
-  text-decoration: none;
+  color: #242424;  
   padding: 0 16px;
 }
 
@@ -304,11 +326,52 @@ nav {
 /* Footer */
 
 footer {
-  background-color: #242424;
+  background-color: #010101;  
+}
+
+.footer_social--list {
+  margin-bottom: 20px;
+  width: 100%;
+  max-width: 500px;
+  display: flex;  
+  justify-content: space-around;
+}
+
+.footer_row {
+  width: 100%;
+  padding: 8% 0;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  justify-content: center;
 }
 
 .footer_logo--img {
   width: 70px;
-  height: 70px;
-  
+  height: 70px;  
+}
+
+.footer_social--link,
+.footer_copyright {
+  color: white;
+}
+
+.footer_logo--popper {
+  color: white;
+  position: absolute;
+  right : 0;
+  top: 30px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 300ms ease;
+}
+
+.footer_anchor {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.footer_anchor:hover .footer_logo--popper {
+  transform: translateX(40px);
+  opacity: 1;
 }
